--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@vue/runtime-dom": "^3.2.44",
     "core-js": "^3.8.3",
     "element-ui": "^2.15.10",
     "vue": "^2.6.14",
